--- a/src/app/success/success.html
+++ b/src/app/success/success.html
@@ -6,7 +6,7 @@
         <a routerLink = "search">Search</a>/
         <a routerLink = "add">Add</a>/
         <a routerLink = "settings">Settings</a>/
-        <a routerLink = "login">Logout</a>
+        <a routerLink = "/login">Logout</a>
         <router-outlet></router-outlet>
     </div>
 
