--- a/src/app/login/login.html
+++ b/src/app/login/login.html
@@ -1,19 +1,20 @@
-<div class="w-25">
-    <div *ngIf="errorMessage" class="alert alert-danger">{{errorMessage}}
-    </div>
-    <form [formGroup]="loginForm" (ngSubmit)="authenticate()">
-        <label>Enter UserID</label>
-        <input type="number" formControlName="id" class="form-control form-control-lg"> <br />
-        <label>Enter Password</label>
-        <input type="password" formControlName="password" class="form-control form-control-log"><br />
-        <input type="submit" value="Login" class="w-100 btn btn-primary btn-lg">
-    </form>
+<div>
     <h2>Login Form</h2>
-    <p>Form is Pending</p> 
-
-    <a routerLink="/register">Register</a>
-
-    <br>
-    <button routerLink="/register" class="w-100 btn btn-primary"> Create Account</button>
-  <a routerLink="/success/0">Success</a>
+    <div class="w-25">
+        <div *ngIf = "errorMessage" class="alert alert-danger">{{errorMessage}}</div>
+        <form [formGroup] = "loginForm" (ngSubmit) = "authenticate()">
+            <label>Enter userid</label>
+            <input type="number" formControlName="id" class="form-control form-control-lg"> <br />
+            <label>Enter password</label>
+            <input type="password" formControlName="password" class="form-control form-control-log"><br/>
+            <input type="submit" value="Login" class="w-100 btn btn-primary btn-lg">
+        </form>
+        <hr />
+        <button routerLink = "/register" class="w-100 btn btn-secondary btn-lg">Create Account</button>
+        <br><br>
+        <div>
+      <a routerLink="/users" class="w-100 btn btn-success btn-success-lg">User Component</a>
+    </div>
+    </div>   
+    
 </div>
