added files with detail-box and user-item to fetch data using id

--- a/src/app/login/login.html
+++ b/src/app/login/login.html
@@ -1,20 +1,28 @@
 <div>
-    <h2>Login Form</h2>
-    <div class="w-25">
-        <div *ngIf = "errorMessage" class="alert alert-danger">{{errorMessage}}</div>
-        <form [formGroup] = "loginForm" (ngSubmit) = "authenticate()">
-            <label>Enter userid</label>
-            <input type="number" formControlName="id" class="form-control form-control-lg"> <br />
-            <label>Enter password</label>
-            <input type="password" formControlName="password" class="form-control form-control-log"><br/>
-            <input type="submit" value="Login" class="w-100 btn btn-primary btn-lg">
-        </form>
-        <hr />
-        <button routerLink = "/register" class="w-100 btn btn-secondary btn-lg">Create Account</button>
-        <br><br>
-        <div>
+  <h2>Login Form</h2>
+  <div class="w-25">
+    <div *ngIf="errorMessage" class="alert alert-danger">{{errorMessage}}</div>
+    <form [formGroup]="loginForm" (ngSubmit)="authenticate()">
+      <label>Enter userid</label>
+      <input type="number" formControlName="id" class="form-control form-control-lg"> <br />
+      <label>Enter password</label>
+      <input type="password" formControlName="password" class="form-control form-control-log"><br />
+      <input type="submit" value="Login" class="w-100 btn btn-primary btn-lg">
+    </form>
+    <hr />
+    <button routerLink="/register" class="w-100 btn btn-secondary btn-lg">Create Account</button>
+    <br><br>
+    <div>
       <a routerLink="/users" class="w-100 btn btn-success btn-success-lg">User Component</a>
     </div>
-    </div>   
-    
+    <br><br>
+    <div>
+      <a routerLink="/detail-box" class="w-100 btn btn-warning btn-warning-lg">User Details</a>
+    </div>
+     <hr />
+        <div>
+            <button routerLink = "/findUser" class="w-100 btn btn-primary btn-lg">User Item Component by sir</button>
+        </div>
+  </div>
+
 </div>
